--- a/css/style.css
+++ b/css/style.css
@@ -1219,3 +1219,18 @@ fieldset {
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
 }
+.error {
+	padding: 20px;
+	margin: auto;
+	position: fixed;
+	left: 50%;
+	top: 20%;
+	transform: translateX(-50%);
+	width: 70%;
+	text-align: center;
+	font-size: 20px;
+	background-color: white;
+	border: 3px solid #ff5635;
+	border-radius: 5px;
+	z-index: 100;
+}
